# POO

./: .gitignore  vcpkg.json
src/colocvii/2014/: main.cpp
src/colocvii/2014-14/: CMakeLists.txt  main.cpp
src/colocvii/2014/data/: patients.csv  tests.csv
src/colocvii/2017-14/: CMakeLists.txt  main.cpp
src/colocvii/2024/: 152_Aelenei_AlexIoan.cpp  CMakeLists.txt
src/lab/2/: 8.cpp
src/teme/tema/: CMakeLists.txt  README.md
src/teme/tema/src/: bank.hpp  main.cpp  query.hpp
src/teme/tema1/: CMakeLists.txt  README.md  bank.h  database.h  main.cpp
src/teme/tema1/scripts/: createTables.sql  initializeDatabase.sql
src/teme/tema1/src/: bank.h  database.h  main.cpp
src/teme/tema2/: CMakeLists.txt  README.md
src/teme/tema2/scripts/: initializeDatabase.sql
src/teme/tema2/src/: bank.h  database.h  exception.h  interface.h  main.cpp
src/teme/tema3/src/: bank.hpp  database.hpp  exception.hpp  interface.hpp  validation.hpp
